test/indexRewriteContext.slq

def f[moved x:ğ”¹]â‡’x;
def g(const x:ğ”¹){}

def main(){
	x:=H(0:ğ”¹);
	g(f[x]); /// error
}
